cabal-version:      3.0
name:               smt-encoding
version:            0.1.0.0
synopsis:
    A toy implementation of how Gillian encodes symbolic state into SMT.

-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Shiva Tamil Kumaran
maintainer:         shivatk01@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SymbolicMemory
                    , LogicalExpression
                    , PathConstraint
                    , TypeEnv
                    , SymbolicStore
                    , Assertion
                    , WislSymbolicMemory
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, extra^>=1.8
    hs-source-dirs:   src
    default-language: Haskell2010

executable smt-encoding
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        smt-encoding

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite smt-encoding-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        smt-encoding
